fix: Transferring repository dependencies to Finder classes